--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,4 +1,4 @@
-title: rpi-play-with-omxplayer
+title: Playing a video with omxplayer
 hero_image: images/banner.png
 subtitle: rpi-play-with-omxplayer subtitle
 description: rpi-play-with-omxplayer description
@@ -6,5 +6,5 @@ original_url: https://codeclubprojects.org/en-GB/scratch/rock-band
 theme: cc-prototype
 published: false
 steps:
-  - title: Step one
+  - title: Playing video
     duration: 60
