--- a/en/meta.yml
+++ b/en/meta.yml
@@ -5,7 +5,7 @@ original_url:
 theme: cc-prototype
 duration: 1
 listed: false
-copyedit: false
+copyedit: true
 interests: ""
 technologies: "raspberry pi"
 steps:
