--- a/en/meta.yml
+++ b/en/meta.yml
@@ -6,6 +6,7 @@ theme: cc-prototype
 duration: 1
 listed: false
 copyedit: true
+ingredient: true
 interests: ""
 technologies: "raspberry pi"
 steps:
